# profiling-test

bar-lib/: Cargo.toml
bar-lib/src/: lib.rs
child-lib/: Cargo.toml
child-lib/src/: lib.rs
foo-lib/: Cargo.toml  build.rs
foo-lib/src/: lib.rs
my-bin/: Cargo.toml
my-bin/src/: main.rs
profiling/: Cargo.toml
profiling-procmacros/: Cargo.toml
profiling-procmacros/src/: lib.rs
profiling/src/: lib.rs  optick_mock.rs  puffin_mock.rs  superluminal_impl.rs  superluminal_mock.rs  tracing_impl.rs  tracing_mock.rs  tracy_impl.rs  tracy_mock.rs
