[package]
name = "child-lib"
version = "0.1.0"
edition = "2021"

[features]
default = []
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]

[dependencies]
profiling = { path = "../profiling" }
