[package]
name = "profiling"
version = "0.1.0"
edition = "2021"

[dependencies]
puffin = { version = "0.19", optional = true }
optick = { version = "1.3", optional = true }
tracing = { version = "0.1", optional = true }
tracy-client = { version = "0.17", optional = true }
superluminal-perf = { version = "0.1", optional = true }
profiling-procmacros = { path = "../profiling-procmacros", optional = true }

[features]
default = ["procmacros"]
profile-with-puffin = ["puffin", "profiling-procmacros?/profile-with-puffin"]
profile-with-optick = ["optick", "profiling-procmacros?/profile-with-optick"]
profile-with-superluminal = [
    "superluminal-perf",
    "profiling-procmacros?/profile-with-superluminal",
]
profile-with-tracing = ["tracing", "profiling-procmacros?/profile-with-tracing"]
profile-with-tracy = [
    "tracy-client",
    "profiling-procmacros?/profile-with-tracy",
]
type-check = []
procmacros = ["profiling-procmacros"]
